# dhikrtop

./: .gitignore  00_START_HERE.md  APP_REVIEW_SUMMARY.md  BUILD_AND_PREVIEW.md  BUILD_CACHE_FIX.md  BUILD_FIX_COMPLETE.md  BUILD_FIX_GUIDE.md  BUILD_FOR_WINDOWS.md  COMMIT_INSTRUCTIONS.md  COMPILATION_FIXED.md  COMPILATION_FIXED_FINAL.md  COMPLETE_CHECKLIST.md  COMPLETION_REPORT.md  DESIGN_IMPLEMENTATION_STATUS.md  DEVELOPMENT_INDEX.md  DEVELOPMENT_SESSION_SUMMARY.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  EXECUTE_COMMIT.sh  FINAL_COMMIT_GUIDE.md  FINAL_SESSION_SUMMARY.md  GIT_COMMIT_LOG.md  HOW_TO_USE_NEW_DOCS.md  IMPLEMENTATION_COMPLETE.md  INSTALLER_BUILD_GUIDE.md  NEW_FEATURES.md  PHASED_IMPLEMENTATION_PLAN.md  PHASE_1_READY.md  PHASE_1_STARTED.md  PHASE_COMPLETION_SUMMARY.md  PLANNING_COMPLETE.md  PREVIEW_ON_LINUX.md  PROJECT_INDEX.md  PROJECT_REVIEW.md  QUICK_REF.md  QUICK_REFERENCE.md  README.md  READY_FOR_WINDOWS_BUILD.md  READY_TO_COMMIT.md  SESSION_COMPLETE_MARCH_2.md  SESSION_SUMMARY.md  (+35 more)
.github/workflows/: build-windows.yml
assets/Dhikr Reminder App Design/: README.md  index.html
docs/: .gitkeep  ALGORITHMS.md  API_AND_TESTING.md  ARCHITECTURE.md  COMPLETE_PROJECT_STRUCTURE.md  COMPREHENSIVE_PLAN.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_COMPLETION_SUMMARY.md  INDEX.md  MASTER_INDEX.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  START_HERE.md  STRUCTURE_GUIDE.md  USER_GUIDE.md  VERIFICATION_COMPLETE.md  WATERFALL_COMPONENT.md  WATERFALL_DELIVERY.md  WATERFALL_FINAL_SUMMARY.md  WATERFALL_INTEGRATION.md  WATERFALL_QUICK_REFERENCE.md  WATERFALL_README.md  WATERFALL_VISUAL_GUIDE.md  requirements_ml.txt
docs/PHASED_IMPLEMENTATION/: README.md
docs/STATUS_AND_REPORTS/: PROJECT_STATUS.md
quranic_qiraat_ml/: .gitignore  INDEX.md  README.md  STRUCTURE.md
releases/: RELEASES.md
scripts/: create-icons.py  fetch-seen-db.mjs
src/: App.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  build-linux.sh  build-release.sh  ci-local.sh  tauri.conf.json
src-tauri/src/: audio.rs  command_tests.rs  commands.rs  db.rs  db_tests.rs  idle.rs  lib.rs  main.rs  schema.rs  tests.rs
tests/: .gitkeep  useDatabase.test.ts  useDatabase.webDailyFallback.test.tsx  useQuranAPI.test.ts  userDataModes.test.ts
(+114 files in other folders)
