[package]
name = "dhikrtop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dhikrtop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
lazy_static = "1.4"
thiserror = "1.0"

# Audio (optional; enable with `--features audio`)
cpal = { version = "0.17", optional = true }
hound = { version = "3.5", optional = true }

[features]
# Default build does NOT require system audio dev libraries (e.g., ALSA on Linux)
default = []
# Enable voice recording backend (requires system deps on Linux: `libasound2-dev`)
audio = ["cpal", "hound"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_System_SystemInformation"] }
winreg = "0.52"
